# dark-region-analysis

./: .env.yaml  .sops.yaml  Dockerfile  README.md  docker-compose.yml  justfile  mise.toml  package.json  pyproject.toml
.serena/: project.yml
src/dark_region_analysis/: __init__.py  annotation.py  cli.py  detection.py  models.py  reporting.py  web.py
src/dark_region_analysis/static/src/: app.css
src/dark_region_analysis/templates/: index.html
tests/: test_basic.py
